# disbotter-web

./: .gitignore  LICENSE  README.md  TODO.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yaml
data/nodes/: README.md  onCommand.rhai
data/nodes/command/: getCommand.rhai  onCommand.rhai
data/nodes/command/properties/: breakChannel.rhai  breakInteraction.rhai  breakMember.rhai  breakUser.rhai
data/nodes/common/: createTextMessage.rhai  flowIf.rhai  null.rhai  randomBool.rhai  reply.rhai
data/nodes/common/flow/: flowIf.rhai  flowLoopTimes.rhai
data/nodes/common/interactions/: createTextMessage.rhai  reply.rhai  sendMessage.rhai
data/nodes/common/math/: add.rhai  and.rhai  constantNumber.rhai  cosine.rhai  divide.rhai  equal.rhai  greater_equal.rhai  greater_than.rhai  invert.rhai  less_equal.rhai  less_than.rhai  multiply.rhai  not_equal.rhai  or.rhai  randomBool.rhai  randomInteger.rhai  randomNumber.rhai  sine.rhai  subtract.rhai  tangens.rhai
disbotter-generator/: Cargo.toml  README.md
disbotter-generator/src/: builder.rs  compiler.rs  loader.rs  main.rs  server.rs
src/: hooks.client.ts  hooks.server.ts
src/components/common/: BuildTime.svelte  Collapse.svelte
src/components/editor/: Navbar.svelte  ProjectProvider.svelte  ProjectStructure.svelte  Properties.svelte  Topbar.svelte
src/lib/editor/: node.ts  project.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/editor/: +page.svelte
src/routes/sentry-example/: +page.svelte
tests/: base-interactions.spec.ts  node-editor.spec.ts
(+14 files in other folders)
