[package]
name = "disbotter-generator"
version = "0.1.0"
edition = "2021"
description = "Code generator for disbotter"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
rhai = { version = "1.15.1", features = ["metadata", "serde"] }
serde = "1.0.183"
serde_json = "1.0.104"
uuid = { version = "1.4.1", features = ["v4"] }
