[package]
name = "disbotter-generator"
version = "0.1.0"
edition = "2021"
description = "Code generator for disbotter"

[[bin]]
name = "disbotter"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
clap = { version = "4.3.21", features = ["derive"] }
colored = "2.0.4"
git2 = "0.17.2"
rhai = { version = "1.15.1", features = ["metadata", "serde", "sync"] }
serde = "1.0.183"
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
